test/Fail/Issue7803.err
Issue7803.agda:12.1-13.14: error: [PathAbstractionFailed]
Path abstraction failed for type _4 (i = i) → Set₁.
The type may be non-fibrant or its sort depends on an interval variable
when checking that the clause
p i with _
... | _ = Set
has type Set ≡ Set
